# LearningVyatSu

./: .gitignore  README.md
Computer science/labaratory-work-3/: schemes.drawio
Computer science/labaratory-work-4/: .$schemes.drawio.bkp
Computer science/labaratory-work-6/: .$schemes.drawio.bkp
Computer science/labaratory-work-7/solutions/: solution-3.circ  (+1 more)
Discrete-Mathematics/labaratory-work-1/: shemes.drawio
Engineering-Culture/labaratory-work-3/: ИВТб-1301-05-00_МакаровСА_ЛР3.tex
Fundamentals of engineering culture/labaratory-work-1/: ИВТб-1301-05-00_МакаровСА_ЛР1.docx
Fundamentals of engineering culture/labaratory-work-2/: ИВТб-1301-05-00_МакаровСА_ЛР2.aux  ИВТб-1301-05-00_МакаровСА_ЛР2.toc
Fundamentals of engineering culture/labaratory-work-4/: ИВТб-1301-05-00_МакаровСА_ЛР4.tex
Programming/labaratory-work-1/: .$schemes.drawio.bkp  schemes.drawio
Programming/labaratory-work-2/: .$schemes.drawio.bkp
Programming/labaratory-work-3/: .$shemes.drawio.bkp  c.c
Programming/labaratory-work-4/: .$shemes.drawio.bkp  solution.c
Programming/labaratory-work-5/: .$shemes.drawio.bkp  input.txt  labaratory-work-5.sln  shemes.drawio
Programmings/labaratory-work-2/: schemes.drawio
Programmings/labaratory-work-3/: shemes.drawio
Russian-Statehood/homework-1/: ИВТб-1301-05-00_МакаровСА_ДЗ1.tex  ИВТб-1301-05-00_МакаровСА_ДЗ8.tex
Russian-Statehood/homework-2/: ИВТб-1301-05-00_МакаровСА_ДЗ2.aux  ИВТб-1301-05-00_МакаровСА_ДЗ2.tex
Russian-Statehood/homework-3/: ИВТб-1301-05-00_МакаровСА_ДЗ3.pptx
Russian-Statehood/homework-4/: ИВТб-1301-05-00_МакаровСА_ДЗ4.tex
Russian-Statehood/homework-5/: ИВТб-1301-05-00_МакаровСА_ДЗ5.tex
Russian-Statehood/homework-7/: ИВТб-1301-05-00_МакаровСА_ДЗ7.tex
Russian-Statehood/homework-8/: ИВТб-1301-05-00_МакаровСА_ДЗ8.tex
Russian-Statehood/law-project/: law-project.tex
RussianStatehood/homework-8/: ИВТб-1301-05-00_МакаровСА_ДЗ8.tex
automata-theory/labaratory-work-1/: schema.drawio  shema.drawio
automata-theory/labaratory-work-2/: ex.py  example.py  main.py  schema.drawio  test.py
automata-theory/labaratory-work-3/: main.py  mb.drawio  schema.drawio
computational-mathematics/labaratory-work-1/: graphs.py  methods.py  report.ipynb
data-managament/: asdf.sql  docker-compose.yml  explain.xml  functions.sql  initial_functions.sql  initial_migration.sql  initial_seed.sql  initial_views.sql  migration.sql  seeder.sql  views.sql  yml.yml
data-managament/cppqt/: CMakeLists.txt
data-managament/pyqt/: requirements.txt
discrete-mathematics/labaratory-work-2/: schemes.drawio  shemes.drawio
discrete-mathematics/labaratory-work-3/: schemes.drawio  shemes.drawio
discrete-mathematics/labaratory-work-4/: sсhemes.drawio
discrete-mathematics/labaratory-work-5/: shemes.drawio  sсhemes.drawio
discrete-mathematics/labaratory-work-6/: shemes.drawio  sсhemes.drawio
discrete-mathematics/labaratoty-work-4/: shemes.drawio
educational-practice/task-1/: solution.pas
educational-practice/task-2/: ans1.txt  solution.pas  task2.txt  task3.txt
educational-practice/task-3/: ans1.txt  ans3.txt  task2.txt
educational-practice/task-4/: ans1.txt  ans2.txt  task2.txt
engineering-culture/labaratory-work-2/: ИВТб-1301-05-00_МакаровСА_ЛР2.tex
engineering-culture/labaratory-work-4/: ИВТб-1301-05-00_МакаровСА_ЛР4.aux
oop/labaratories/: labaratories.slnx
oop/labaratory-work-1/: dish.hpp  main.cpp  pizza.cpp  pizza.hpp  salad.h
programming-technologies/labaratory-work-3/solution/: CMakeLists.txt
programming-technologies/labaratory-work-3/solution/src/: main.cpp
programming-technologies/labaratory-work-3/solution/src/database/: database.cpp  database.h
programming-technologies/labaratory-work-3/solution/src/modals/: create_note_modal.cpp  create_note_modal.h  create_product_modal.cpp  create_product_modal.h  update_product_modal.cpp  update_product_modal.h
programming-technologies/labaratory-work-3/solution/src/services/: product_service.cpp  product_service.h
programming-technologies/labaratory-work-3/solution/src/windows/: main_window.cpp  main_window.h
programming-technologies/labaratory-work-4/appdb/: CMakeLists.txt  productdb.def
programming-technologies/labaratory-work-4/appdb/include/: appdb.h
programming-technologies/labaratory-work-4/appdb/src/: appdb.cpp
programming-technologies/labaratory-work-4/solution/: CMakeLists.txt  docker-compose.yml  initial_seed.sql  intial_migration.sql
programming-technologies/labaratory-work-4/solution/product_app/: CMakeLists.txt
programming-technologies/labaratory-work-4/solution/product_app/src/: main.cpp
programming-technologies/labaratory-work-4/solution/product_db_lib/: CMakeLists.txt
programming-technologies/labaratory-work-4/solution/product_db_lib/src/: product_db_lib.cpp
programming-technologies/labaratory-work-4/solution/product_qt_lib/: CMakeLists.txt
programming-technologies/labaratory-work-4/solution/product_qt_lib/include/: product_qt_lib.h
programming-technologies/labaratory-work-4/solution/product_qt_lib/src/: main.cpp  product_repository_wrapper.cpp  product_repository_wrapper.h
programming-technologies/labaratory-work-4/solution/product_qt_lib/src/asm/: validate_int_input.asm
programming-technologies/labaratory-work-4/solution/product_qt_lib/src/modals/: create_product_modal.cpp  create_product_modal.h  update_product_modal.cpp  update_product_modal.h
programming-technologies/labaratory-work-4/solution/product_qt_lib/src/windows/: main_window.cpp  main_window.h
programming-technologies/labaratory-work-4/solution/src/modals/: create_product_modal.cpp  create_product_modal.h  update_product_modal.cpp  update_product_modal.h
programming-technologies/labaratory-work-4/solution/src/windows/: main_window.cpp  main_window.h
programming/labaratory-work-4/: shemes.drawio
programming/labaratory-work-5/: shemes.drawio
programming/labaratory-work-6/: main.c  queue.c  queue.h  shemes.drawio
programming/labaratory-work-7/: shemes.drawio
programming/labaratory-work-8/: shemes.drawio
systems-engineering/: er-diagram.drawio  idef-0.drawio
(+505 files in other folders)
